# vantage

./: .gitignore  .smoke.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
scripts/: build_logo.py  build_sprite.py  changelog_section.py  check_assets.py  check_contrast.py  check_imports.py
sql/: 0.sql  1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql
src/: alerts.rs  cached.rs  certs.rs  cloudflare.rs  config.rs  cron.rs  dashboard.rs  diffutil.rs  disk.rs  geoip.rs  guard.rs  headers.rs  lockout.rs  logs.rs  main.rs  migrations.rs  revert.rs  safemode.rs  security.rs  session.rs  settings.rs  spotlight.rs  systemd.rs  totp.rs  updates.rs  ws.rs
src/account/: mod.rs  routes.rs
src/alerts/: mod.rs  routes.rs
src/audit/: mod.rs  routes.rs
src/backup/: mod.rs  routes.rs  s3.rs
src/cron/: mod.rs  routes.rs
src/dbadmin/: browse.rs  cancel.rs  edit.rs  mod.rs  postgres.rs  routes.rs  safety.rs  schema.rs  sqlite.rs  storage.rs
src/docker/: mod.rs  routes.rs
src/firewall/: backend.rs  lockout.rs  mod.rs  routes.rs  storage.rs  sync.rs
src/health/: checker.rs  mod.rs  routes.rs  storage.rs
src/metrics/: docker.rs  host.rs  mod.rs  routes.rs  storage.rs  thresholds.rs
src/proxy/: cf_tunnel.rs  cloudflared.rs  mod.rs  render.rs  routes.rs  storage.rs
src/sanitizer/: clamav.rs  mod.rs  routes.rs  virustotal.rs
src/secrets/: mod.rs  routes.rs  scanner.rs  storage.rs
src/selfupdate/: helper.rs  mod.rs  routes.rs
src/ssh/: mod.rs  routes.rs
static/: README.md
static/css/: app.css  base.css  certs.css  components.css  docker.css  docker_snapshots.css  firewall.css  health.css  metrics.css  sanitizer.css  secrets.css  security.css  shell.css  status.css  tokens.css
static/css/pages/: account.css  alerts.css  audit.css  auth.css  backups.css  certs.css  dashboard.css  database.css  disk.css  docker.css  firewall.css  health.css  logs.css  metrics.css  proxy.css  sanitizer.css  scripts.css  secrets.css  security.css  settings.css  snapshots.css  ssh.css  status.css
static/js/: db.js  docker.js  docker_snapshots.js  firewall.js  health.js  live.js  logs.js  metrics.js  sanitizer.js  secrets.js  security.js  services.js
static/js/core/: api.js  apply-flow.js  chart.js  countdown-confirm.js  format.js  live.js  palette.js  prefs.js  reauth.js  safemode.js  shell.js  theme-init.js  theme.js  ui.js  widgets.js
static/js/db/: editor.js  erd.js  explain.js  filters.js  grid.js  gridcore.js  history.js  jump.js  jumpcore.js  orderby.js  peek.js  stagecore.js  state.js  tabs.js  tree.js
static/js/pages/: account.js  alerts.js  audit.js  backups.js  dashboard.js  database.js  disk.js  docker.js  docker_snapshots.js  firewall.js  health.js  logs.js  metrics.js  proxy.js  sanitizer.js  scripts.js  secrets.js  security.js  settings.js  ssh.js  ssh_audit.js  systemd.js
templates/: account.html  alerts.html  audit.html  auth.html  backups.html  certs.html  dashboard.html  database.html  disk.html  docker.html  docker_snapshots.html  firewall.html  health.html  layout.html  login.html  login_2fa.html  logs.html  metrics.html  proxy.html  sanitizer.html  scripts.html  secrets.html  security.html  settings.html  ssh.html  ssh_audit.html  status.html  systemd.html
tools/: grid-tests.mjs  jump-tests.mjs  orderby-tests.mjs  stage-tests.mjs
tools/editor-bundle/: README.md  entry.mjs  package-lock.json  package.json  rollup.config.mjs
